--- a/package.json
+++ b/package.json
@@ -1,13 +1,19 @@
 {
     "name": "nAn",
     "version": "0.1.0",
+    "author": "John Ladan",
 
     "devDependencies": {
         "mocha": "*",
-        "should": ">= 0.0.1"
+        "should": ">=0.0.1"
     },
 
     "scripts": {
-        "test": "mocha -w"
+        "test": "mocha"
+    },
+
+    "modules": {
+        "algebra": "lib/algebra.js",
+        "ode": "lib/ode.js"
     }
 }
