--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "flot"]
 	path = flot
 	url = https://github.com/flot/flot.git
+[submodule "build"]
+	path = build
+	url = git@github.com:jladan/bower-nAnts.git
